# CMLib

./: CMakeLists.txt  LICENSE  README.md
examples/: main.c
include/: CMLib.h  matrix.h  ml_algorithms.h  utils.h  vector.h
src/: matrix.c  ml_algorithms.c  utils.c  vector.c
